deployment/dok8s/to_delete/xdai.yaml
apiVersion: v1
kind: Service
metadata:
  name: xdai 
  labels:
    app: xdai
    component: xdai
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  ports:
   - port: 8545
     targetPort: 8545
  selector:
   app: xdai
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xdai
  labels:
    app: xdai
    component: xdai
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xdai
  template:
    metadata:
      labels:
        app: xdai
        component: xdai
        part-of: cryptosoccer
        version: "0.0.1"
    spec:
      containers:
      - name: xdai
        image: freeverseio/xdai:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8545
        volumeMounts:
        - name: xdai-storage
          mountPath: /home/parity/.local/share/io.parity.ethereum
      imagePullSecrets:
      - name: docker-secret
      volumes:
      - name: xdai-storage
        persistentVolumeClaim:
          claimName: xdai-pvc
