deployment/dok8s/to_delete/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cryptosoccer-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-freeverse
spec:
  tls:
  - hosts:
    - k8s.gorengine.com
    secretName: cryptosoccer-tls
  rules:
  - host: k8s.gorengine.com
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
      - path: /xdai
        backend:
          serviceName: xdai
          servicePort: 8545
      # - path: /horizon(/|$)(.*)
      #   backend:
      #     serviceName: horizon
      #     servicePort: 4000
      - path: /auth(/|$)(.*)
        backend:
          serviceName: authproxy
          servicePort: 8080
      #- path: /universe(/|$)(.*)
      #  backend:
      #    serviceName: universeapi
      #    servicePort: 4000
      #- path: /trader(/|$)(.*)
      #  backend:
      #    serviceName: trader
      #    servicePort: 4000
